--- a/view/init.view.xml
+++ b/view/init.view.xml
@@ -17,6 +17,24 @@
           press="onSideNavButtonPress"></Button>
         <Text text="Tool name"
           wrapping="false"></Text>
+
+        <IconTabHeader id="iconTabHeader"
+          selectedKey="invalidKey"
+          select="onItemSelect"
+          showOverflowSelectList="true"
+          backgroundDesign="Transparent"
+          mode="Inline"
+          items="{path: '/navigation'}">
+          <layoutData>
+            <OverflowToolbarLayoutData priority="NeverOverflow"
+              shrinkable="true" />
+          </layoutData>
+          <items>
+            <IconTabFilter text="{title}"
+              key="{key}"></IconTabFilter>
+          </items>
+        </IconTabHeader>
+
         <ToolbarSpacer />
         <Button icon="sap-icon://search"
           type="Transparent">
@@ -36,38 +54,10 @@
       </tnt:ToolHeader>
     </tnt:header>
 
-    <tnt:sideContent>
-      <tnt:SideNavigation expanded="true"
-        itemSelect="onItemSelect">
-
-        <tnt:NavigationList items="{path: '/navigation'}">
-          <tnt:NavigationListItem text="{title}"
-            icon="{icon}"
-            enabled="{enabled}"
-            expanded="{expanded}"
-            items="{items}"
-            key="{key}">
-            <tnt:NavigationListItem text="{title}"
-              key="{key}"
-              enabled="{enabled}"></tnt:NavigationListItem>
-          </tnt:NavigationListItem>
-        </tnt:NavigationList>
-
-        <tnt:fixedItem>
-          <tnt:NavigationList items="{path: '/fixedNavigation'}">
-            <tnt:NavigationListItem text="{title}"
-              icon="{icon}"
-              key="{key}"></tnt:NavigationListItem>
-          </tnt:NavigationList>
-        </tnt:fixedItem>
-
-      </tnt:SideNavigation>
-    </tnt:sideContent>
-
     <tnt:mainContents>
       <App id="MainContainer" />
     </tnt:mainContents>
-    
+
   </tnt:ToolPage>
 
 </core:View>
